# HackerOS-Package-Manager

./: build.hl
example-repos/hello-hpm/: README.md  info.hk
example-repos/myapp-gui/: build.toml  info.hk
hpm-example-repo/: README.md  info.hk
repo/: repo.json
source-code/: Cargo.toml
source-code/src/: error.rs  main.rs  manifest.rs  repo.rs  sandbox.rs  state.rs  utils.rs
source-code/src/commands/: autoremove.rs  build.rs  clean.rs  create.rs  deps.rs  doctor.rs  info.rs  install.rs  list.rs  mod.rs  outdated.rs  pin.rs  refresh.rs  remove.rs  rollback.rs  run.rs  search.rs  switch.rs  unpin.rs  update.rs  upgrade.rs  verify.rs
