[package]
name = "hpm"
version = "0.8.0"
edition = "2021"
authors = ["HackerOS Team <hackeros068@gmail.com>"]
description = "Hacker Package Manager – nowoczesny menedżer pakietów oparty na repozytoriach git"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"
git2 = "0.18"
hk-parser = "0.2.1"
indexmap = { version = "2.2", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
landlock = "0.3"
nix = { version = "0.29", features = ["fs", "mount", "process", "sched", "user", "resource", "ioctl", "term", "hostname", "signal"] }
seccomp = "0.1.2"
libc = "0.2"
scopeguard = "1.2"
chrono = "0.4"
fs2 = "0.4"
tempfile = "3.8"
tokio = { version = "1", features = ["rt", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
