[package]
name = "hpm"
version = "0.7.0"
edition = "2021"
authors = ["HackerOS Team"]
description = "Hacker Package Manager – nowoczesny menedżer pakietów oparty na repozytoriach git"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
lexopt = "0.3"
colored = "2.1"
indicatif = "0.17"
git2 = "0.18"
hk-parser = "0.3.0"
indexmap = { version = "2.2", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
landlock = "0.3"
nix = { version = "0.29", features = ["fs", "mount", "process", "sched", "user", "resource", "ioctl", "term", "hostname", "signal"] }
seccomp = "0.1.2"
libc = "0.2"
scopeguard = "1.2"
chrono = "0.4"
fs2 = "0.4"
tempfile = "3.8"
tokio = { version = "1", features = ["rt", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
dirs = "5.0"
miette = { version = "5.10", features = ["fancy"] }
thiserror = "1.0"
